# containers

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  README.md
.claude/sessions/: .last_inbox_check
.claude/state/: breezing-timeline.jsonl  changed-files.jsonl  instructions-loaded.jsonl  runtime-reactive.jsonl  session-skills-used.json  usage-stats.jsonl
.github/: renovate.json5
.github/container-template/: CHANGELOG.md  Dockerfile
.github/workflows/: build.yaml  pr.yaml  push.yaml  release.yaml  scaffold.yaml  schedule.yaml
containers/claude-code/: CHANGELOG.md  Dockerfile
containers/claude-code/ci/: values.yaml
containers/omega-mcp/: CHANGELOG.md  Dockerfile
containers/omega-mcp/ci/: values.yaml
containers/omega-mcp/rootfs/opt/omega-pro-shim/: pyproject.toml
containers/omega-mcp/rootfs/opt/omega-pro-shim/omega_pro_shim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
containers/omega-mcp/rootfs/usr/local/share/omega/: sitecustomize.py
docs/superpowers/plans/: 2026-06-09-containers-repo.md
docs/superpowers/specs/: 2026-06-09-containers-design.md
scripts/: check-upstream.sh  update-version.sh
